fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -343,6 +343,7 @@ iframe {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 0px;
   }
 
   #introduction {
@@ -367,6 +368,13 @@ iframe {
   }
   #nightModeButton {
     margin-top: 10px;
+  }
+  #about {
+  }
+  .description {
+    font-size: 24px;
+    margin: 2%;
+    text-align: center;
   }
 }
 /* dark mode classes */
